tenzir/tests/exec/expr/escape/raw/unknown_escape_blob.tql
// error: true

from {
  // Unknown escape sequences are an error even in a blob
  b1: b"test\ktest"
}
